# arcaea

./: Cargo.toml  README.md  build.rs  test.txt
src/: config.rs  editor.rs  error.rs  history.rs  lib.rs  main.rs  row.rs  style.rs  syntax.rs  terminal.rs  tui.rs
syntax.d/: bash.ini  c.ini  coffeescript.ini  cpp.ini  csharp.ini  css.ini  d.ini  dart.ini  elixir.ini  fish.ini  gitignore.ini  go.ini  groovy.ini  haskell.ini  html.ini  ini.ini  java.ini  javascript.ini  json.ini  julia.ini  kotlin.ini  lua.ini  markdown.ini  matlab.ini  nim.ini  nix.ini  nosql.ini  nushell.ini  ocaml.ini  perl.ini  php.ini  powershell.ini  processing.ini  python.ini  r.ini  racket.ini  raku.ini  ruby.ini  rust.ini  scala.ini  (+9 more)
