[package]
name = "arcaea"
version = "0.2.0"
edition = "2021"
rust-version = "1.81.0"
authors = ["Charlie"]
description = "A Rust Console Ascii Editor App"
license = "MIT"

[dependencies]
crossterm = "0.28.1"
unicode-width = "0.2.0"
unicode-segmentation = "1.12.0"

[dev-dependencies]
tempfile = "3.19.1"
